# MaskedCNN

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MaskedCNN.cbp  README.md  cmake_install.cmake  maskedcnnexe
include/maskedcnn/: Activation.hpp  ConvOps.hpp  ConvolutionalLayer.hpp  DataLoader.hpp  DropoutLayer.hpp  EltwiseLayer.hpp  FullyConnectedLayer.hpp  InputLayer.hpp  Layer.hpp  LayerLoader.hpp  Network.hpp  NetworkLoader.hpp  PipeLayer.hpp  PoolLayer.hpp  SoftmaxLayer.hpp  Statistics.hpp  Tensor.hpp  Training.hpp  TrainingRegime.hpp  Util.hpp  Visuals.hpp
maskedcnncuda/: compile.sh  main.cu
src/: Activation.cpp  ConvOps.cpp  ConvolutionalLayer.cpp  DataLoader.cpp  DropoutLayer.cpp  EltwiseLayer.cpp  FullyConnectedLayer.cpp  InputLayer.cpp  Layer.cpp  LayerLoader.cpp  Main.cpp  Network.cpp  NetworkLoader.cpp  PoolLayer.cpp  SoftmaxLayer.cpp  Statistics.cpp  Training.cpp  Visuals.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  testmaskedcnn
test/src/: ConvolutionTest.cpp  NetworkTest.cpp
